@@ -1,6 +1,6 @@
 /*
- * Gnome Chemistry Utils GOffice component
- * gogchem3dapp.h
+ * GChemPaint GOffice component
+ * gogchem3dwin.h
  *
  * Copyright (C) 2011 Jean Bréfort <jean.brefort@normalesup.org>
  *
@@ -20,28 +20,26 @@
  * USA
  */
 
-#ifndef GO_GCHEM3D_APP_H
-#define GO_GCHEM3D_APP_H
 
+#ifndef GCP_GCHEM3D_WIN_H
+#define GCP_GCHEM3D_WIN_H
+
+#include <gcugtk/chem3dwindow.h>
 #include "gchemutils.h"
-#include "gogcuapp.h"
-#include <gcugtk/application.h>
 
-namespace gcu {
-	class Document;
-}
+class GOGChem3dApplication;
 
-class GOGChem3dApplication: public gcugtk::Application, public GOGcuApplication
+class GOGChem3dWindow: public gcugtk::Chem3dWindow
 {
 public:
-	GOGChem3dApplication ();
-	virtual ~GOGChem3dApplication ();
+	GOGChem3dWindow (GOGChem3dApplication *App, GOGChemUtilsComponent *gogcu);
+	virtual ~GOGChem3dWindow ();
 
-	void ImportDocument (GOGChemUtilsComponent *gogcu);
-	GtkWindow *EditDocument (GOGChemUtilsComponent *gogcu);
-	bool GetData (GOGChemUtilsComponent *gogcu, gpointer *data, int *length, void (**clearfunc) (gpointer), gpointer *user_data);
-	void Render (GOGChemUtilsComponent *gogcu, cairo_t *cr, double width, double height);
-	void UpdateBounds (GOGChemUtilsComponent *gogcu);
+	void OnSave ();
+	char const *GetDefaultTitle ();
+
+private:
+	GOGChemUtilsComponent *m_gogcu;
 };
 
-#endif	// GO_GCHEM3D_APP_H
+#endif	//	GCP_GCHEM3D_WIN_H
